--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.0.0.js"></script>
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Pig Dice Game</title>
+    <title>pig-dice</title>
   </head>
+
   <body>
-
-    <div class="start-menu container">
+    <div class="container">
       <div class="jumbotron">
-        <h1>Let's play Pig Dice!</h1>
-          <form id="player-1">
-            <div class="form-group">
-              <label for="player1Name">Player 1 Name:</label>
-              <input required class="player1Name form-control" type="text">
-            </div>
-          </form>
-          <form id="player-2">
-            <div class="form-group">
-              <label for="player2Name">Player 2 Name:</label>
-              <input required class="player2Name form-control" type="text">
-            </div>
-          </form>
-          <button id="start" class="btn-info btn">Start</button>
+        <h1>PIG DICE: THE BEST GAME</h1>
       </div>
-    </div>
 
-    <div class="player-console container">
-        <button id="new-game" class="btn-success btn">NEW GAME</button>
-        <div class = "row">
+      <div class="dice">
+        <img src="img/die0.png"></img>
+      </div>
+
+      <div class="well">
+        <div class="row">
           <div class="col-md-6">
-            <h2>Player 1: <span id = "player1Name"><span></h2>
-              <button id="player1-roll" class="btn-success btn">Roll</button>
-              <button id="player1-hold" class="btn-success btn">Hold</button>
-            <h2>Dice Roll: <span id="die-roll-1"></span></h2>
-            <p>Round Total: <span id="round-total-1"></span></p>
-            <p>Total Score: <span id="total-score-1"></span></p>
+            <div class="panel">
+              <div id="player1panel" class="panel-heading">
+                <h2>Player 1</h2>
+              </div>
+              <div class="panel-body">
+                <h3>Turn Score: </h3><span id="player1Tscore"></span>
+                <h3>Game Score: </h3><span id="player1Gscore"></span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="panel">
+              <div id="player2panel" class="panel-heading">
+                <h2>Player 2</h2>
+              </div>
+              <div class="panel-body">
+                <h3>Turn Score: </h3><span id="player2Tscore"></span>
+                <h3>Game Score: </h3><span id="player2Gscore"></span>
+              </div>
+            </div>
           </div>
 
-        <div class="col-md-6">
-          <h2>Player 2: <span id = "player2Name"><span></h2>
-            <button id="player2-roll" class="btn-success btn">Roll</button>
-            <button id="player2-hold" class="btn-success btn">Hold</button>
-            <h2>Dice Roll: <span id="die-roll-2"></span></h2>
-            <p>Round Total: <span id="round-total-2"></span></p>
-            <p>Total Score: <span id="total-score-2"></span></p>
-        </div>
-        </div>
+          <button class="btn-lg" id="roll">Click to Roll</button>
+          <button class="btn-lg" id="hold">Click to Hold</button>
+          <br><br>
+          <button class="btn-lg" id="newGame">New Game</button>
+          <h3><ul id="rolledNumber">
+          </ul></h3>
+
       </div>
-
-
-
+    </div>
   </body>
 </html>
