--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <button class="btn-lg" id="roll">Click to Roll</button>
           <button class="btn-lg" id="hold">Click to Hold</button>
           <br><br>
-          <button class="btn-lg" id="newGame">New Game</button>
+          <button type="button" name="button" onclick="location.reload()">New Game</button>
           <h3><ul id="rolledNumber">
           </ul></h3>
 
